# dotfiles

./: .bash_profile  .bashrc  .fehbg  .stalonetrayrc  .vimrc  .xinitrc
.config/: picom.conf  userChrome.css
.config/dunst/: dunstrc
.config/ly/: config.ini
.config/xmobar/: build  cabal.project  xmobar.cabal  xmobar.hs  xmobar.hs.bak
.xmonad/: build  xmonad.cabal  xmonad.hs
